Spell check fix

--- a/0introduction.tex
+++ b/0introduction.tex
@@ -99,7 +99,7 @@ A binary relation $\le$ over a set $P$ is a \emph{partial order} if it is reflex
 \begin{exmp}
 Reachability relation in a directed graph $G$, such that $x \le y$ iff there is a path from $x$ to $y$ in $G$, is a pre-order. This relation is clearly reflexive and transitive, but it does not have to be antisymmetric --- if $x$ and $y$ are different vertices contained in one cycle, then $x \le y$ and $y \le x$, but $x \ne y$.
 
-If $G$ is additionally required to be acyclic, then the reachably relation is guaranteed to be antisymmetric, so it is a partial order.
+If $G$ is additionally required to be acyclic, then the reachability relation is guaranteed to be antisymmetric, so it is a partial order.
 \end{exmp}
 
 
